RESOLVED FIXED271251
REGRESSION (276177@main): LinearMediaPlayer controls briefly appear when entering element fullscreen
https://bugs.webkit.org/show_bug.cgi?id=271251
Summary REGRESSION (276177@main): LinearMediaPlayer controls briefly appear when ente...
Andy Estes
Reported 2024-03-19 10:11:51 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2024-03-19 10:12:02 PDT
Andy Estes
Comment 2 2024-03-19 10:21:33 PDT
EWS
Comment 3 2024-03-19 13:07:58 PDT
Committed 276364@main (e021db348aed): <https://commits.webkit.org/276364@main> Reviewed commits have been landed. Closing PR #26129 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.